<resources>
  <string name="app_name">Pocket Meals</string>
  <string name="welcome_message">Welcome Username</string>
  <string name="view_recipes">View Recipes</string>
  <string name="view_shopping_list">View Shopping List</string>
  <string name="view_weekly_plan">View Weekly Plan</string>
    <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="sign_up">Sign Up</string>
  <string name="pocketmeals_login">PocketMeals</string>
  <string name="preference_file_key">com.example.pocketmeals.PREFERENCE_FILE_KEY</string>
  <string name="preference_userID_key">com.example.pocketmeals.USER_ID</string>
  <string name="menu">Menu</string>
  <string name="logged_in">LOGGED_IN</string>
  <string name="admin_actions">Admin Actions</string>
  <string name="admin_options">Admin Options</string>
  <string name="make_admin">Make Admin</string>
  <string name="delete_user">Delete User</string>
  <string name="manage_users">Manage Users</string>
    <string name="add_recipe">Add Recipe</string>
  <string name="recipes">Recipes</string>
    <string name="recipe_name">Recipe Name</string>
  <string name="ingredients">Ingredients</string>
  <string name="nutritional_info">Nutritional Info</string>
  <string name="save_recipe">Save Recipe</string>
  <string name="shopping_list">Shopping List</string>
  <string name="remove_admin">Remove Admin</string>
    <string name="select_a_recipe_to_delete">Select a Recipe to Delete</string>
  <string name="delete_recipe">Delete Recipe</string>
  <string name="refresh_meal_plan">Refresh Meal Plan</string>
  <string name="current_meal_plan">Current Meal Plan:</string>
  <string name="add_meal_to_plan">Add Meal to Plan</string>
  <string name="select_recipe">Select Recipe:</string>
  <string name="meal_type">Meal Type:</string>
  <string name="select_day">Select Day:</string>
  <string name="meal_planner">Meal Planner</string>
    <string name="recipe_title">Recipe Title</string>
  <string name="recipe_description">Recipe Description</string>
    <string name="confirm_password">Confirm Password</string>
  <string name="tap_a_recipe_to_delete">Tap a recipe to delete</string>
    <string name="preparation_link">Preparation Link</string>
  <string name="calories">Calories</string>
  <string name="protein_g">Protein (g)</string>
  <string name="fat_g">Fat (g)</string>
  <string name="carbs_g">Carbs (g)</string>
  <string name="no_account_sign_up_here">No account? Sign up here.</string>
  <string name="calories_0">Calories: 0</string>
  <string name="carbs_0g">Carbs: 0g</string>
  <string name="fat_0g">Fat: 0g</string>
  <string name="protein_0g">Protein: 0g</string>
  <string name="create_account">Create Account</string>
  <string name="user">User</string>

</resources>