<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/adminLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".activity.AdminActivity">

  <TextView
    android:id="@+id/manageUsersTextView"
    android:layout_width="350dp"
    android:layout_height="80dp"
    android:layout_marginTop="80dp"
    android:gravity="center"
    android:text="@string/manage_users"
    android:textSize="35sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/makeAdminButton"
    android:layout_width="165dp"
    android:layout_height="60dp"
    android:layout_marginTop="30dp"
    android:backgroundTint="@color/oceanblue"
    android:text="@string/make_admin"
    android:textSize="20sp"
    app:layout_constraintEnd_toStartOf="@+id/deleteUserButton"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/manageUsersTextView" />

  <Button
    android:id="@+id/deleteUserButton"
    android:layout_width="165dp"
    android:layout_height="60dp"
    android:layout_marginTop="30dp"
    android:backgroundTint="@color/oceanblue"
    android:text="@string/delete_user"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/makeAdminButton"
    app:layout_constraintTop_toBottomOf="@id/manageUsersTextView" />

  <Button
    android:id="@+id/menuButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:backgroundTint="@color/oceanblue"
    android:text="@string/menu"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>