<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

  <TextView
      android:id="@+id/welcomeMessageTextView"
      android:layout_width="350dp"
      android:layout_height="80dp"
      android:layout_marginTop="10dp"
      android:gravity="center"
      android:text="@string/welcome_message"
      android:textSize="35sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/toolbar"
      tools:ignore="TextSizeCheck" />

  <Button
      android:id="@+id/viewRecipesButton"
      android:layout_width="315dp"
      android:layout_height="120dp"
      android:layout_marginTop="30dp"
      android:text="@string/view_recipes"
      android:textSize="36sp"
      android:backgroundTint="@color/oceanblue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/welcomeMessageTextView" />

  <Button
      android:id="@+id/addRecipeButton"
      android:layout_width="315dp"
      android:layout_height="120dp"
      android:layout_marginTop="16dp"
      android:text="@string/add_recipe"
      android:textSize="36sp"
      android:backgroundTint="@color/oceanblue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/viewRecipesButton" />

  <Button
      android:id="@+id/viewWeeklyPlanButton"
      android:layout_width="315dp"
      android:layout_height="120dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="@color/oceanblue"
      android:text="@string/view_weekly_plan"
      android:textSize="36sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/addRecipeButton"
      tools:ignore="TextSizeCheck" />

  <Button
    android:id="@+id/manageUsersButton"
    android:layout_width="315dp"
    android:layout_height="120dp"
    android:layout_marginTop="16dp"
    android:text="@string/manage_users"
    android:textSize="36sp"
    android:backgroundTint="@color/oceanblue"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/viewWeeklyPlanButton"
    android:visibility="invisible"
    />

</androidx.constraintlayout.widget.ConstraintLayout>